# graphql-reverse

./: Cargo.toml  README.md
schemas/: sample.json
src/: error.rs  main.rs  schema.rs
