[package]
authors = ["PotatoMaster101"]
description = "GraphQL Object Reverse Lookup"
edition = "2021"
keywords = ["GraphQL"]
license = "GPL-3"
name = "revql"
readme = "README.md"
repository = "https://github.com/PotatoMaster101/graphql-reverse"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
